--- a/index.html
+++ b/index.html
@@ -8,5 +8,56 @@
   </head>
   <body>
 
+    <!--Header Section-->
+    <header>
+      <p>SECRET AGENT SUPPLY INC.</p>
+    </header>
+
+    <!--Arrival Section-->
+    <div>
+      <p>NEW ARRIVAL</p>
+      <p>SPORTS BIKES AND MOTORCYCLES</p>
+    </div>
+
+    <!--Navigation Section-->
+    <div>
+      <span>Eyewear</span>
+      <span>Apparel</span>
+      <span>Gadgets</span>
+      <span>Vehicles</span>
+      <span>Classes</span>
+      <span>Contact</span>
+    </div>
+
+    <!--Product Section-->
+    <div class="section">
+      <div>
+        <p>Exploding Pen</p>
+      </div>
+      <div>
+        <p>Cellular Watch</p>
+      </div>
+      <div>
+        <p>Thermal Glasses</p>
+      </div>
+    </div>
+
+    <!--Information Section-->
+    <div class="section">
+      <div>
+        <p>Location</p>
+        <p>-47.346436, 84.32354</p>
+      </div>
+      <div>
+        <p>Hours</p>
+        <p>0800 - 1800</p>
+      </div>
+    </div>
+
+    <!--Footer Section-->
+    <footer>
+      <p>Copyright Secret Agent Supply Inc.</p>
+    </footer>
+
   </body>
 </html>
