improve rough html structure

--- a/index.html
+++ b/index.html
@@ -9,54 +9,67 @@
   <body>
 
     <!--Header Section-->
-    <header>
-      <p>SECRET AGENT SUPPLY INC.</p>
+    <header class="section">
+      <div class="container">
+        <img src="./resources/images/logo.png">
+        <span>SECRET AGENT SUPPLY INC.</span>
+      </div>
     </header>
 
     <!--Arrival Section-->
-    <div>
-      <p>NEW ARRIVAL</p>
-      <p>SPORTS BIKES AND MOTORCYCLES</p>
+    <div class="section">
+      <div class="container">
+        <p>NEW ARRIVAL</p>
+        <p>SPORTS BIKES AND MOTORCYCLES</p>
+      </div>
     </div>
 
     <!--Navigation Section-->
-    <div>
-      <span>Eyewear</span>
-      <span>Apparel</span>
-      <span>Gadgets</span>
-      <span>Vehicles</span>
-      <span>Classes</span>
-      <span>Contact</span>
+    <div class="section">
+      <div class="container">
+        <span>Eyewear</span>
+        <span>Apparel</span>
+        <span>Gadgets</span>
+        <span>Vehicles</span>
+        <span>Classes</span>
+        <span>Contact</span>
+      </div>
     </div>
 
     <!--Product Section-->
     <div class="section">
-      <div>
-        <p>Exploding Pen</p>
-      </div>
-      <div>
-        <p>Cellular Watch</p>
-      </div>
-      <div>
-        <p>Thermal Glasses</p>
+      <div class="container productcontainer">
+        <div>
+          <p>Exploding Pen</p>
+        </div>
+        <div>
+          <p>Cellular Watch</p>
+        </div>
+        <div>
+          <p>Thermal Glasses</p>
+        </div>
       </div>
     </div>
 
     <!--Information Section-->
     <div class="section">
-      <div>
-        <p>Location</p>
-        <p>-47.346436, 84.32354</p>
-      </div>
-      <div>
-        <p>Hours</p>
-        <p>0800 - 1800</p>
+      <div class="container infocontainer">
+        <div>
+          <p>Location</p>
+          <p>-47.346436, 84.32354</p>
+        </div>
+        <div>
+          <p>Hours</p>
+          <p>0800 - 1800</p>
+        </div>
       </div>
     </div>
 
     <!--Footer Section-->
-    <footer>
-      <p>Copyright Secret Agent Supply Inc.</p>
+    <footer class="section">
+      <div class="container">
+        <p>Copyright Secret Agent Supply Inc.</p>
+      </div>
     </footer>
 
   </body>
