--- a/index.html
+++ b/index.html
@@ -11,28 +11,30 @@
     <!--Header Section-->
     <header class="section">
       <div class="container">
-        <img src="./resources/images/logo.png">
+        <img class="logo" src="./resources/images/logo.png">
         <span>SECRET AGENT SUPPLY INC.</span>
       </div>
     </header>
 
     <!--Arrival Section-->
-    <div class="section">
-      <div class="container">
-        <p>NEW ARRIVAL</p>
-        <p>SPORTS BIKES AND MOTORCYCLES</p>
+    <div class="section arrival">
+      <div class="arrivalcontainer">
+        <div class="arrivalbanner">
+          <p>NEW ARRIVAL</p>
+          <h1>SPORTS BIKES AND MOTORCYCLES</h1>
+        </div>
       </div>
     </div>
 
     <!--Navigation Section-->
-    <div class="section">
-      <div class="container">
-        <span>Eyewear</span>
-        <span>Apparel</span>
-        <span>Gadgets</span>
-        <span>Vehicles</span>
-        <span>Classes</span>
-        <span>Contact</span>
+    <div class="section navigation">
+      <div class="container navigationcontainer">
+        <p>Eyewear</p>
+        <p>Apparel</p>
+        <p>Gadgets</p>
+        <p>Vehicles</p>
+        <p>Classes</p>
+        <p>Contact</p>
       </div>
     </div>
 
