complete desktop site

--- a/index.html
+++ b/index.html
@@ -39,29 +39,38 @@
     </div>
 
     <!--Product Section-->
-    <div class="section">
+    <div class="section product">
       <div class="container productcontainer">
-        <div>
+        <div class="imagecontainer">
+          <div class="imagecontainer2">
+            <img src="./resources/images/pen.png">
+          </div>
           <p>Exploding Pen</p>
         </div>
-        <div>
+        <div class="imagecontainer">
+          <div class="imagecontainer2">
+            <img src="./resources/images/watch.png">
+          </div>
           <p>Cellular Watch</p>
         </div>
-        <div>
+        <div class="imagecontainer">
+          <div class="imagecontainer2">
+            <img src="./resources/images/glasses.png">
+          </div>
           <p>Thermal Glasses</p>
         </div>
       </div>
     </div>
 
     <!--Information Section-->
-    <div class="section">
+    <div class="section info">
       <div class="container infocontainer">
-        <div>
-          <p>Location</p>
+        <div class="infocontentcontainer">
+          <p class="infotitlecontainer">Location</p>
           <p>-47.346436, 84.32354</p>
         </div>
-        <div>
-          <p>Hours</p>
+        <div class="infocontentcontainer">
+          <p class="infotitlecontainer">Hours</p>
           <p>0800 - 1800</p>
         </div>
       </div>
