complete tablet version

--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
     <!--Navigation Section-->
     <div class="section navigation">
       <div class="container navigationcontainer">
-        <p>Eyewear</p>
-        <p>Apparel</p>
-        <p>Gadgets</p>
-        <p>Vehicles</p>
-        <p>Classes</p>
-        <p>Contact</p>
+        <p class="largemenu">Eyewear</p>
+        <p class="largemenu">Apparel</p>
+        <p class="largemenu">Gadgets</p>
+        <p class="largemenu">Vehicles</p>
+        <p class="largemenu">Classes</p>
+        <p class="largemenu">Contact</p>
+        <p class="smallmenu">Menu</p>
       </div>
     </div>
 
@@ -53,7 +54,7 @@
           </div>
           <p>Cellular Watch</p>
         </div>
-        <div class="imagecontainer">
+        <div class="imagecontainer product3">
           <div class="imagecontainer2">
             <img src="./resources/images/glasses.png">
           </div>
