complete mobile version

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </div>
           <p>Exploding Pen</p>
         </div>
-        <div class="imagecontainer">
+        <div class="imagecontainer product2">
           <div class="imagecontainer2">
             <img src="./resources/images/watch.png">
           </div>
@@ -68,7 +68,7 @@
       <div class="container infocontainer">
         <div class="infocontentcontainer">
           <p class="infotitlecontainer">Location</p>
-          <p>-47.346436, 84.32354</p>
+          <p class="pad">-47.346436, 84.32354</p>
         </div>
         <div class="infocontentcontainer">
           <p class="infotitlecontainer">Hours</p>
@@ -79,7 +79,7 @@
 
     <!--Footer Section-->
     <footer class="section">
-      <div class="container">
+      <div class="container footer">
         <p>Copyright Secret Agent Supply Inc.</p>
       </div>
     </footer>
